--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<link rel="shortcut icon" type="image/x-icon" href="http://www.taplow.io/favicon.ico" />
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	</head>
 	<body id="top">
 
