--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+		<link rel="icon" href="favicon.ico?v=2" />
+		<link rel="shortcut icon" href="favicon.ico?v=2" />
 	</head>
 	<body id="top">
 
