Added new charts for house prices and a better favicon

--- a/index.html
+++ b/index.html
@@ -46,17 +46,45 @@
 					<section class="special">
                         <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10286971-taplow-parish-council-vs-taplow-parish-age"></iframe></div>
                         <div class="content">
-                        	<h3>#7 Taplow parish council vs Taplow parish demography.</h3>
-                            <p>Whilst the under 45s and their young families are in a minority in Taplow parish, it is still a substantial group. How does Taplow parish council manage to do so little for this younger demography? The council has little to no representation of this age group.<br />Source: ONS 2011 Census data. 29/12/15</p>
+                        	<h3>#X Taplow parish council vs Taplow parish demography.</h3>
+                            <p>Whilst the under 45s and their young families are in a minority in Taplow parish, it is still a substantial group. How does Taplow parish council manage to do so little for this younger demography? The council has little to no representation of this age group. Source: ONS 2011 Census data. 29/12/15</p>
                         </div>
                     </section>
 					<section class="special">
 						<div class="image"><a href="http://www.mapsdata.co.uk/mapsdataapp/index.php/site/htmlembed/4b7251aff777a9611fe8e6cbc2cdb59b?marker=mapsdata_m4&zoom=14&center=51.531900,-0.692757&md5=4b7251aff777a9611fe8e6cbc2cdb59b&viewcolumn=&display=clustermap&viewopacity=0.8&viewradius=25&"><img src="images/Taplow-voter-heatmap.jpg" width=300px height=300px alt="" /></a></div>
 						<div class="content">
-							<h3>#7 Voter concentration</h3>
-							<p>In an election you will find that the most concentrated voter areas are in and around the village green, down towards the river around Ellington Road and finally the cluster of houses and apartments around Cliveden Guages. These three areas account for about two thirds of the voting age adults in the parish.<br />Source: UK Electoral Register 2015. 29/12/15</p>
+							<h3>#X Voter concentration</h3>
+							<p>In an election you will find that the most concentrated voter areas are in and around the village green, down towards the river around Ellington Road and finally the cluster of houses and apartments around Cliveden Guages. These three areas account for about two thirds of the voting age adults in the parish. Source: UK Electoral Register 2015. 29/12/15</p>
 						</div>
 					</section>
+					<section class="special">
+                        <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10293465-taplow-yoy-house-price-changes"></iframe></div>
+                        <div class="content">
+                        	<h3>#10 House price changes flatten.</h3>
+                            <p>The compound effect of lower number of housing sales with a negligible increase in average house prices ends a good run for Taplow parish since the 2008 financial crisis. Taplow has done well for the last 20 years since records were held but the advent of Crossrail might give the area the boost it needs for continued house price inflation if interest is waning locally. Source: UK Land registry 2015. 30/12/15</p>
+                        </div>
+                    </section>
+					<section class="special">
+                        <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10293331-taplow-annual-housing-transactions"></iframe></div>
+                        <div class="content">
+                        	<h3>#9 Taplow property transactions dropped in 2015 as well.</h3>
+                            <p>Historically you can see that the number of property transactions varies between 60 (2011) and 136 (2014). As there are 791 households on the UK Electoral register for Taplow, it implies that between 7.6% and 17.2% of Taplow parish household churn every year. This has been skewed by the increase in housing stock from Cliveden Gauges implying there is churn when in fact it is just new supply. However it looks like figures have settled down once again. It would not be a suprise to see high numbers appear again with the increase in housing stock coming from the Berkeley Homes development which has just started. What will be interesting to see is whether over-supply of housing is likely to flatten house price growth now. Source: UK Land registry 2015. 30/12/15</p>
+                        </div>
+                    </section>
+					<section class="special">
+                        <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10292961-taplow-average-house-price"></iframe></div>
+                        <div class="content">
+                        	<h3>#8 Taplow average house price stalled in 2015 too.</h3>
+                            <p>As the mix of rural, traditional and commuter belt appeal continued to cast a spell over the British public, Taplow average house prices grew on average at 9.5% year on year. With the arrival of Crossrail in 2018 this is likely to continue as Taplow essentially becomes a viable suburb of Greater London. Source: UK Land registry 2015. 30/12/15</p>
+                        </div>
+                    </section>
+					<section class="special">
+                        <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10293088-taplow-total-house-price"></iframe></div>
+                        <div class="content">
+                        	<h3>#7 Taplow on the rise until 2015.</h3>
+                            <p>Since the UK Land Registry started to record house price sales, people have paid over £540m in total to live in this parish, exchanging property 2014 times. This peaked at £66m through 136 sales in 2014 and has now dropped in 2015 due to a considerable reduction in the number of sales. Source: UK Land registry 2015. 30/12/15</p>
+                        </div>
+                    </section>
 					<section class="special">
                         <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10286664-taplow-home-ownership"></iframe></div>
                         <div class="content">
