More changes and graphs added to index.html

--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
 						</div>
 					</section>
 					<section class="special">
+                        <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10293752-taplow-average-house-price-comparisson"></iframe></div>
+                        <div class="content">
+                        	<h3>#11 Houses continue to increase, flats/appts drop in value.</h3>
+                            <p>By breaking down the average prices by property type, detached, semis and terraced houses continue to rise in price demonstrating demand for family homes. Conversely, flats and appartments have taken a significant drop in 2015. Source: UK Land registry 2015. 30/12/15</p>
+                        </div>
+                    </section>
+					<section class="special">
                         <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10293465-taplow-yoy-house-price-changes"></iframe></div>
                         <div class="content">
                         	<h3>#10 House price changes flatten.</h3>
