More changes to index.html

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 					<section class="special">
                         <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10286971-taplow-parish-council-vs-taplow-parish-age"></iframe></div>
                         <div class="content">
-                        	<h3>#X Taplow parish council vs Taplow parish demography.</h3>
-                            <p>Whilst the under 45s and their young families are in a minority in Taplow parish, it is still a substantial group. How does Taplow parish council manage to do so little for this younger demography? The council has little to no representation of this age group. Source: ONS 2011 Census data. 29/12/15</p>
+                        	<h3>#13 Election special - Taplow parish council vs Taplow parish demography.</h3>
+                            <p>Whilst the under 45s and their young families are in a minority in Taplow parish, it is still a substantial group. How does Taplow parish council manage to do so little for this younger demography? The council has little to no representation of this age group which may be something to consider. Source: ONS 2011 Census data. 29/12/15</p>
                         </div>
                     </section>
 					<section class="special">
 						<div class="image"><a href="http://www.mapsdata.co.uk/mapsdataapp/index.php/site/htmlembed/4b7251aff777a9611fe8e6cbc2cdb59b?marker=mapsdata_m4&zoom=14&center=51.531900,-0.692757&md5=4b7251aff777a9611fe8e6cbc2cdb59b&viewcolumn=&display=clustermap&viewopacity=0.8&viewradius=25&"><img src="images/Taplow-voter-heatmap.jpg" width=300px height=300px alt="" /></a></div>
 						<div class="content">
-							<h3>#X Voter concentration</h3>
+							<h3>#12 Election special - Voter concentration</h3>
 							<p>In an election you will find that the most concentrated voter areas are in and around the village green, down towards the river around Ellington Road and finally the cluster of houses and apartments around Cliveden Guages. These three areas account for about two thirds of the voting age adults in the parish. Source: UK Electoral Register 2015. 29/12/15</p>
 						</div>
 					</section>
@@ -61,21 +61,21 @@
                         <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10293752-taplow-average-house-price-comparisson"></iframe></div>
                         <div class="content">
                         	<h3>#11 Houses continue to increase, flats/appts drop in value.</h3>
-                            <p>By breaking down the average prices by property type, detached, semis and terraced houses continue to rise in price demonstrating demand for family homes. Conversely, flats and appartments have taken a significant drop in 2015. Source: UK Land registry 2015. 30/12/15</p>
+                            <p>By breaking down the average prices by property type, detached, semis and terraced houses continue to rise in price demonstrating demand for family homes. Ironically many of these family homes are in Cliveden Gages where the policy of over 55s prohibits a younger age group from moving into the parish. Conversely, flats and appartments have taken a significant drop in 2015. Source: UK Land registry 2015. 30/12/15</p>
                         </div>
                     </section>
 					<section class="special">
                         <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10293465-taplow-yoy-house-price-changes"></iframe></div>
                         <div class="content">
                         	<h3>#10 House price changes flatten.</h3>
-                            <p>The compound effect of lower number of housing sales with a negligible increase in average house prices ends a good run for Taplow parish since the 2008 financial crisis. Taplow has done well for the last 20 years since records were held but the advent of Crossrail might give the area the boost it needs for continued house price inflation if interest is waning locally. Source: UK Land registry 2015. 30/12/15</p>
+                            <p>The compound effect of lower number of housing sales with a negligible increase in average house prices ends a good run for Taplow parish since the 2008 financial crisis. Taplow has done well for the last 20 years since records started but the advent of Crossrail might give the area the boost it needs for continued house price inflation if interest is waning locally. Source: UK Land registry 2015. 30/12/15</p>
                         </div>
                     </section>
 					<section class="special">
                         <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10293331-taplow-annual-housing-transactions"></iframe></div>
                         <div class="content">
                         	<h3>#9 Taplow property transactions dropped in 2015 as well.</h3>
-                            <p>Historically you can see that the number of property transactions varies between 60 (2011) and 136 (2014). As there are 791 households on the UK Electoral register for Taplow, it implies that between 7.6% and 17.2% of Taplow parish household churn every year. This has been skewed by the increase in housing stock from Cliveden Gauges implying there is churn when in fact it is just new supply. However it looks like figures have settled down once again. It would not be a suprise to see high numbers appear again with the increase in housing stock coming from the Berkeley Homes development which has just started. What will be interesting to see is whether over-supply of housing is likely to flatten house price growth now. Source: UK Land registry 2015. 30/12/15</p>
+                            <p>Historically you can see that the number of property transactions varies between 60 (2011) and 136 (2014). As there are 791 households on the UK Electoral register for Taplow, it implies that between 7.6% and 17.2% of Taplow parish households churn every year. This has been skewed by the increase in housing stock from Cliveden Gages implying there is churn when in fact it is just new supply. However it looks like figures have settled down once again. It would not be a suprise to see high numbers appear again with the increase in housing stock coming from the Berkeley Homes development which has just started. What will be interesting to see is whether over-supply of housing is likely to flatten house price growth now. Source: UK Land registry 2015. 30/12/15</p>
                         </div>
                     </section>
 					<section class="special">
