Added text analysis entry

--- a/index.html
+++ b/index.html
@@ -35,14 +35,25 @@
 		<!-- One -->
 			<section id="one" class="wrapper style2 special">
 				<header class="major">
-					<h2>"It is the mark of a truly intelligent person to be moved by statistics"<br />
-					George Bernard Shaw</h2>
+					<h2><i>"It is the mark of a truly intelligent person to be moved by statistics".</i>
+					<h3>George Bernard Shaw</h3></h2>
+				</header>
+				<header class="major">	
+					<h2><i>"There is much pleasure to be gained from useless knowledge".</i>
+					<h3>Bertrand Russell</h3></h2>
 				</header>
 			</section>
 
 		<!-- Two -->
 			<section id="two" class="wrapper">
 				<div class="inner alt">
+					<section class="special">
+                        <div class="image"><a href="http://voyant-tools.org/tool/Cirrus/?corpus=1451515228802.803&query=&stopList=1451516086613tg"><img src="images/Taplow-text-analysis.jpg" width=300px height=300px alt="" /></a></div>
+                        <div class="content">
+                        	<h3>#14 Election special - Taplow parish council website text analysis.</h3>
+                            <p>By running the Taplow parish council website through a text analyser and filtering out comming words like 'the', 'of', etc, you can get a good sense of how an establishment or entity chooses to communicate with its intended audience. The top 5 words used on the website are  taplow (114), road (107), granted (94), parish (84) and council (67). Click on the image for more detailed analysis. Source: voyant-tools.org & Taplow parish council website. 30/12/15</p>
+                        </div>
+                    </section>
 					<section class="special">
                         <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10286971-taplow-parish-council-vs-taplow-parish-age"></iframe></div>
                         <div class="content">
@@ -53,7 +64,7 @@
 					<section class="special">
 						<div class="image"><a href="http://www.mapsdata.co.uk/mapsdataapp/index.php/site/htmlembed/4b7251aff777a9611fe8e6cbc2cdb59b?marker=mapsdata_m4&zoom=14&center=51.531900,-0.692757&md5=4b7251aff777a9611fe8e6cbc2cdb59b&viewcolumn=&display=clustermap&viewopacity=0.8&viewradius=25&"><img src="images/Taplow-voter-heatmap.jpg" width=300px height=300px alt="" /></a></div>
 						<div class="content">
-							<h3>#12 Election special - Voter concentration</h3>
+							<h3>#12 Election special - Voter concentration.</h3>
 							<p>In an election you will find that the most concentrated voter areas are in and around the village green, down towards the river around Ellington Road and finally the cluster of houses and apartments around Cliveden Guages. These three areas account for about two thirds of the voting age adults in the parish. Source: UK Electoral Register 2015. 29/12/15</p>
 						</div>
 					</section>
@@ -96,42 +107,42 @@
                         <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10286664-taplow-home-ownership"></iframe></div>
                         <div class="content">
                         	<h3>#6 High outright home ownership.</h3>
-                            <p>It is not surprising that with higher levels of education, employment and retirement that Taplow parish owns more of its own property. What is striking is the significant uplift in outright ownership. This could be associated with high net worth individuals residing in the parish but is more likely to be associated with high number of people over 45 who are likely to have paid their mortgages off.<br />Source: ONS 2011 Census data. 29/12/15</p>
+                            <p>It is not surprising that with higher levels of education, employment and retirement that Taplow parish owns more of its own property. What is striking is the significant uplift in outright ownership. This could be associated with high net worth individuals residing in the parish but is more likely to be associated with high number of people over 45 who are likely to have paid their mortgages off. Source: ONS 2011 Census data. 29/12/15</p>
                         </div>
                     </section>
                     <section class="special">
                         <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10261082-taplow-educational-level"></iframe></div>
                         <div class="content">
                         	<h3>#5 Clever people.</h3>
-                            <p>Supporting the premise that the residents of Taplow parish are higher earners (for those that are working anyway), you would expect to see a higher proportion of residents with degrees and professional qualifications. This bears to be true by quite a jump with Taplow being 13% larger than the national figures for those with degrees.<br />Source: ONS 2011 Census data. 29/12/15</p>
+                            <p>Supporting the premise that the residents of Taplow parish are higher earners (for those that are working anyway), you would expect to see a higher proportion of residents with degrees and professional qualifications. This bears to be true by quite a jump with Taplow being 13% larger than the national figures for those with degrees. Source: ONS 2011 Census data. 29/12/15</p>
                         </div>
                     </section>
                     <section class="special">
                         <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10260869-taplow-economic-activity"></iframe></div>
                         <div class="content">
-                            <h3>#4 More working, more retired</h3>
-                            <p>Taplow definitely works harder than the national average (+5%) and the increased number of people in the parish who are retired is 3% greater than the national figures. This would indicate that the amount of money in the area is higher than the norm but this would only be true if those in employment and those that have retired are, or have been, higher earners. This increased income may be offset by having to service the debt associated with higher property costs, especially for those that are still working and paying down mortgages..<br />Source: ONS 2011 Census data. 29/12/15</p>
+                            <h3>#4 More working, more retired.</h3>
+                            <p>Taplow definitely works harder than the national average (+5%) and the increased number of people in the parish who are retired is 3% greater than the national figures. This would indicate that the amount of money in the area is higher than the norm but this would only be true if those in employment and those that have retired are, or have been, higher earners. This increased income may be offset by having to service the debt associated with higher property costs, especially for those that are still working and paying down mortgages. Source: ONS 2011 Census data. 29/12/15</p>
                         </div>
                     </section>
            			<section class="special">
 						<div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10283764-taplow-age-profile"></iframe></div>
 						<div class="content">
-							<h3>#3 Under 45s in the minority</h3>
-							<p>When the statistics for one group of people look broadly similar to the statistics for another group of people, scatter plots like the one above usually look like a nice diagonal line. As you can see the large cluster of dots in the left hand corner represent the large disparity in numbers for those under the age of 45 in Taplow compared to the national figures collected in the census.<br />Source: ONS 2011 Census data. 29/12/15</p>
+							<h3>#3 Under 45s in the minority.</h3>
+							<p>When the statistics for one group of people look broadly similar to the statistics for another group of people, scatter plots like the one above usually look like a nice diagonal line. As you can see the large cluster of dots in the left hand corner represent the large disparity in numbers for those under the age of 45 in Taplow compared to the national figures collected in the census. Source: ONS 2011 Census data. 29/12/15</p>
 						</div>
 					</section>
 					<section class="special">
 						<div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10259936-taplow-age-distribution-2"></iframe></div>
 						<div class="content">
-							<h3>#2 Less children, more adults</h3>
-							<p>By breaking down the under 45's into adults and children it can be seen that both populations are approximately 6% below the national average. However it seems fair to say that if there were 6% more adults with families, there would likely be 6% more children in the parish too, the proportions being broadly equal. This would indicate that the problem with families moving into the area is associated with affordable and available housing stock. As increasing the housing stock in the area is almost impossible due the parish councils attitudes to enhancing the area, an increase in this demography can only come about if members of the parish without children leave the area.<br />Source: ONS 2011 Census data. 29/12/15</p>
+							<h3>#2 Less children, more adults.</h3>
+							<p>By breaking down the under 45's into adults and children it can be seen that both populations are approximately 6% below the national average. However it seems fair to say that if there were 6% more adults with families, there would likely be 6% more children in the parish too, the proportions being broadly equal. This would indicate that the problem with families moving into the area is associated with affordable and available housing stock. As increasing the housing stock in the area is almost impossible due the parish councils attitudes to enhancing the area, an increase in this demography can only come about if members of the parish without children leave the area. Source: ONS 2011 Census data. 29/12/15</p>
 						</div>
 					</section>
 					<section class="special">
 						<div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10251594-taplow-age-distribution"></iframe></div>
 						<div class="content">
-							<h3>#1 Skewed and aging population</h3>
-							<p>Taplow goes against the national norms in a worrying trend that indicates that the middle aged and elderly form the majority of residents in the parish. Those under the age of 45 including their young families are 12% under-represented by comparisson to United Kingdon national figures from the 2011 census. Conversely those over 45 are 12% over-represented by the same 2011 census figures. This is not a 'young' village by any measure.<br />Source: ONS 2011 Census data. 29/12/15</p>
+							<h3>#1 Skewed and aging population.</h3>
+							<p>Taplow goes against the national norms in a worrying trend that indicates that the middle aged and elderly form the majority of residents in the parish. Those under the age of 45 including their young families are 12% under-represented by comparisson to United Kingdon national figures from the 2011 census. Conversely those over 45 are 12% over-represented by the same 2011 census figures. This is not a 'young' village by any measure. Source: ONS 2011 Census data. 29/12/15</p>
 						</div>
 					</section>
 				</div>
