--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <div class="image"><a href="http://voyant-tools.org/tool/Cirrus/?corpus=1451515228802.803&query=&stopList=1451516086613tg"><img src="images/Taplow-text-analysis.jpg" width=300px height=300px alt="" /></a></div>
                         <div class="content">
                         	<h3>#14 Election special - Taplow parish council website text analysis.</h3>
-                            <p>By running the Taplow parish council website through a text analyser and filtering out comming words like 'the', 'of', etc, you can get a good sense of how an establishment or entity chooses to communicate with its intended audience. The top 5 words used on the website are  taplow (114), road (107), granted (94), parish (84) and council (67). Click on the image for more detailed analysis. Source: voyant-tools.org & Taplow parish council website. 30/12/15</p>
+                            <p>By running the Taplow parish council website through a text analyser and filtering out common words like 'the', 'of', etc, you can get a good sense of how an establishment or entity chooses to communicate with its intended audience. The top 5 words used on the website are  taplow (114), road (107), granted (94), parish (84) and council (67). To summarise, it talks mainly about itself and the local roads. Click on the image for more detailed analysis. Source: voyant-tools.org & Taplow parish council website. 30/12/15</p>
                         </div>
                     </section>
 					<section class="special">
