--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
-				<p class="copyright">&copy; Taplow.io. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
+				<p class="copyright">&copy; Taplow.io 2015 Credits: <a href="http://html5up.net">HTML5 UP</a></p>
 			</footer>
 
 		<!-- Scripts -->
