Added meta description and keywords to support google indexing

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 -->
 <html>
 	<head>
-		<title>Taplow.io - uncovering Taplow village</title>
+		<title>Taplow.io - uncovering Taplow, South Bucks</title>
+		<meta name="Description" content="Statistics and information about Taplow, South Buckinghamshire to help residents understand what is going on in the area.">
+		<meta name="Keywords" content="Taplow, Bucks, Buckinghamshire, village, Taplow village, South Bucks, parish, statistics, information, data, demographics, property, housing, council, people, community, census, land registry, electoral register">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -177,7 +179,7 @@
 					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
-				<p class="copyright">&copy; Taplow.io 2015 Credits: <a href="http://html5up.net">HTML5 UP</a></p>
+				<p class="copyright">&copy; Taplow.io 2015. Last updated 30/12/2015. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
 			</footer>
 
 		<!-- Scripts -->
