Change village to parish in one of the first charts

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 						<div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10251594-taplow-age-distribution"></iframe></div>
 						<div class="content">
 							<h3>#1 Skewed and aging population.</h3>
-							<p>Taplow goes against the national norms in a worrying trend that indicates that the middle aged and elderly form the majority of residents in the parish. Those under the age of 45 including their young families are 12% under-represented by comparisson to United Kingdon national figures from the 2011 census. Conversely those over 45 are 12% over-represented by the same 2011 census figures. This is not a 'young' village by any measure. Source: ONS 2011 Census data. 29/12/15</p>
+							<p>Taplow goes against the national norms in a worrying trend that indicates that the middle aged and elderly form the majority of residents in the parish. Those under the age of 45 including their young families are 12% under-represented by comparisson to United Kingdon national figures from the 2011 census. Conversely those over 45 are 12% over-represented by the same 2011 census figures. This is not a 'young' parish by any measure. Source: ONS 2011 Census data. 29/12/15</p>
 						</div>
 					</section>
 				</div>
