--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
 			<section id="two" class="wrapper">
 				<div class="inner alt">
 					<section class="special">
+                        <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10357648-taplow-parish-council-by-elections"></iframe></div>
+                        <div class="content">
+                        	<h3>#15 Election special - Taplow Parish Council By-elections.</h3>
+                            <p>According to South Bucks District Council there has not been a By-election in Taplow ward since 2002. This supports the premise that councillors are usually acquired through the process of co-option where the council vote for the candidate(s), therefore bypassing the democratic process where the residents get to decide who they want on the council. Source: South Bucks District Council. 08/01/16</p>
+                        </div>
+                    </section>
+					<section class="special">
                         <div class="image"><a href="http://voyant-tools.org/tool/Cirrus/?corpus=1451515228802.803&query=&stopList=1451516086613tg"><img src="images/Taplow-text-analysis.jpg" width=300px height=300px alt="" /></a></div>
                         <div class="content">
                         	<h3>#14 Election special - Taplow Parish Council website text analysis.</h3>
